Update CaseCommand.java