@@ -2,9 +2,10 @@ package me.grate.casemanager.command;
 
 import me.grate.casemanager.CaseManager;
 import me.grate.casemanager.casefile.Case;
+import me.grate.casemanager.casefile.CaseEvidence;
 import me.grate.casemanager.casefile.CaseNote;
-import me.grate.casemanager.casefile.CaseService;
 import me.grate.casemanager.casefile.CaseTimelineEntry;
+
 import org.bukkit.Bukkit;
 import org.bukkit.ChatColor;
 import org.bukkit.OfflinePlayer;
@@ -24,6 +25,18 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
 
     private final CaseManager plugin;
 
+    private final List<String> evidenceTypes =
+            Arrays.asList(
+                    "SCREENSHOT",
+                    "VIDEO",
+                    "CHAT_LOG",
+                    "ANTI_CHEAT",
+                    "COREPROTECT",
+                    "LITEBANS",
+                    "OBSERVATION",
+                    "OTHER"
+            );
+
     public CaseCommand(CaseManager plugin) {
         this.plugin = plugin;
     }
@@ -41,19 +54,38 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
             return true;
         }
 
-        switch (args[0].toLowerCase()) {
+        String subCommand =
+                args[0].toLowerCase();
 
-            case "create" -> handleCreate(sender, args);
+        switch (subCommand) {
 
-            case "view" -> handleView(sender, args);
+            case "create":
+                handleCreate(sender, args);
+                break;
 
-            case "list" -> handleList(sender, args);
+            case "view":
+                handleView(sender, args);
+                break;
 
-            case "timeline" -> handleTimeline(sender, args);
+            case "list":
+                handleList(sender, args);
+                break;
 
-            case "note" -> handleNote(sender, args);
+            case "timeline":
+                handleTimeline(sender, args);
+                break;
 
-            default -> sendHelp(sender);
+            case "note":
+                handleNote(sender, args);
+                break;
+
+            case "evidence":
+                handleEvidence(sender, args);
+                break;
+
+            default:
+                sendHelp(sender);
+                break;
         }
 
         return true;
@@ -69,7 +101,7 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
             return;
         }
 
-        if (!(sender instanceof Player creator)) {
+        if (!(sender instanceof Player player)) {
             sender.sendMessage(
                     ChatColor.RED +
                             "Only players can create cases."
@@ -90,7 +122,9 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
         OfflinePlayer target =
                 Bukkit.getOfflinePlayer(targetName);
 
-        if (!target.hasPlayedBefore() && !target.isOnline()) {
+        if (!target.hasPlayedBefore()
+                && !target.isOnline()) {
+
             sender.sendMessage(
                     ChatColor.RED +
                             "That player could not be found."
@@ -98,31 +132,22 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
             return;
         }
 
-        String reason = String.join(
-                " ",
-                Arrays.copyOfRange(args, 2, args.length)
-        );
+        String reason =
+                String.join(
+                        " ",
+                        Arrays.copyOfRange(
+                                args,
+                                2,
+                                args.length
+                        )
+                );
 
-        if (reason.length() < 3) {
+        if (reason.isBlank()) {
             sender.sendMessage(
                     ChatColor.RED +
-                            "The reason must contain at least 3 characters."
+                            "You must provide a reason."
             );
             return;
-        }
-
-        if (reason.length() > 1000) {
-            sender.sendMessage(
-                    ChatColor.RED +
-                            "The reason cannot exceed 1000 characters."
-            );
-            return;
-        }
-
-        String actualTargetName = target.getName();
-
-        if (actualTargetName == null) {
-            actualTargetName = targetName;
         }
 
         sender.sendMessage(
@@ -130,46 +155,45 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
                         "Creating case..."
         );
 
-        CaseService caseService =
-                plugin.getCaseService();
-
-        CompletableFuture<Case> future =
-                caseService.createCase(
+        plugin.getCaseService()
+                .createCase(
                         target.getUniqueId(),
-                        actualTargetName,
-                        creator.getUniqueId(),
-                        creator.getName(),
+                        target.getName() == null
+                                ? targetName
+                                : target.getName(),
+                        player.getUniqueId(),
+                        player.getName(),
                         reason
-                );
+                )
+                .thenAccept(caseFile -> {
 
-        future.thenAccept(caseFile -> {
+                    Bukkit.getScheduler().runTask(
+                            plugin,
+                            () -> sendCaseCreated(
+                                    sender,
+                                    caseFile
+                            )
+                    );
 
-            Bukkit.getScheduler().runTask(
-                    plugin,
-                    () -> sendCaseCreated(
-                            sender,
-                            caseFile
-                    )
-            );
+                })
+                .exceptionally(exception -> {
 
-        }).exceptionally(exception -> {
+                    Bukkit.getScheduler().runTask(
+                            plugin,
+                            () -> sender.sendMessage(
+                                    ChatColor.RED +
+                                            "Failed to create the case."
+                            )
+                    );
 
-            Bukkit.getScheduler().runTask(
-                    plugin,
-                    () -> sender.sendMessage(
-                            ChatColor.RED +
-                                    "Failed to create the case."
-                    )
-            );
+                    plugin.getLogger().severe(
+                            "Failed to create a case."
+                    );
 
-            plugin.getLogger().severe(
-                    "Failed to create a case."
-            );
+                    exception.printStackTrace();
 
-            exception.printStackTrace();
-
-            return null;
-        });
+                    return null;
+                });
     }
 
     private void handleView(
@@ -195,10 +219,12 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
         try {
             caseId = Long.parseLong(args[1]);
         } catch (NumberFormatException exception) {
+
             sender.sendMessage(
                     ChatColor.RED +
                             "Case ID must be a number."
             );
+
             return;
         }
 
@@ -249,9 +275,7 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
                             plugin,
                             () -> sender.sendMessage(
                                     ChatColor.RED +
-                                            "Failed to load case #" +
-                                            caseId +
-                                            "."
+                                            "Failed to load the case."
                             )
                     );
 
@@ -283,10 +307,12 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
             try {
                 limit = Integer.parseInt(args[1]);
             } catch (NumberFormatException exception) {
+
                 sender.sendMessage(
                         ChatColor.RED +
-                                "The limit must be a number."
+                                "Limit must be a number."
                 );
+
                 return;
             }
         }
@@ -294,17 +320,13 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
         if (limit < 1) {
             sender.sendMessage(
                     ChatColor.RED +
-                            "The limit must be at least 1."
+                            "Limit must be at least 1."
             );
             return;
         }
 
         if (limit > 50) {
-            sender.sendMessage(
-                    ChatColor.RED +
-                            "The maximum limit is 50."
-            );
-            return;
+            limit = 50;
         }
 
         final int finalLimit = limit;
@@ -370,10 +392,12 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
         try {
             caseId = Long.parseLong(args[1]);
         } catch (NumberFormatException exception) {
+
             sender.sendMessage(
                     ChatColor.RED +
                             "Case ID must be a number."
             );
+
             return;
         }
 
@@ -392,8 +416,22 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
                         "..."
         );
 
-        plugin.getCaseTimelineService()
-                .getTimeline(caseId)
+        plugin.getCaseService()
+                .getCase(caseId)
+                .thenCompose(caseFile -> {
+
+                    if (caseFile == null) {
+                        return CompletableFuture.failedFuture(
+                                new IllegalArgumentException(
+                                        "Case does not exist."
+                                )
+                        );
+                    }
+
+                    return plugin
+                            .getCaseTimelineService()
+                            .getTimeline(caseId);
+                })
                 .thenAccept(entries -> {
 
                     Bukkit.getScheduler().runTask(
@@ -412,7 +450,7 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
                             plugin,
                             () -> sender.sendMessage(
                                     ChatColor.RED +
-                                            "Failed to load the case timeline."
+                                            "Failed to load case timeline."
                             )
                     );
 
@@ -426,7 +464,7 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
                     return null;
                 });
     }
-
+}
     private void handleNote(
             CommandSender sender,
             String[] args
@@ -437,7 +475,7 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
             return;
         }
 
-        if (!(sender instanceof Player author)) {
+        if (!(sender instanceof Player player)) {
             sender.sendMessage(
                     ChatColor.RED +
                             "Only players can add case notes."
@@ -448,7 +486,7 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
         if (args.length < 3) {
             sender.sendMessage(
                     ChatColor.RED +
-                            "Usage: /case note <id> <message>"
+                            "Usage: /case note <id> <note>"
             );
             return;
         }
@@ -458,10 +496,12 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
         try {
             caseId = Long.parseLong(args[1]);
         } catch (NumberFormatException exception) {
+
             sender.sendMessage(
                     ChatColor.RED +
                             "Case ID must be a number."
             );
+
             return;
         }
 
@@ -473,97 +513,60 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
             return;
         }
 
-        String content = String.join(
-                " ",
-                Arrays.copyOfRange(args, 2, args.length)
-        );
+        String content =
+                String.join(
+                        " ",
+                        Arrays.copyOfRange(
+                                args,
+                                2,
+                                args.length
+                        )
+                );
 
         if (content.isBlank()) {
             sender.sendMessage(
                     ChatColor.RED +
-                            "The note cannot be empty."
-            );
-            return;
-        }
-
-        if (content.length() > 2000) {
-            sender.sendMessage(
-                    ChatColor.RED +
-                            "The note cannot exceed 2000 characters."
+                            "Note cannot be empty."
             );
             return;
         }
 
         sender.sendMessage(
                 ChatColor.GRAY +
-                        "Checking case #" +
+                        "Adding note to case #" +
                         caseId +
                         "..."
         );
 
         plugin.getCaseService()
                 .getCase(caseId)
-                .thenAccept(caseFile -> {
+                .thenCompose(caseFile -> {
+
+                    if (caseFile == null) {
+                        return CompletableFuture.failedFuture(
+                                new IllegalArgumentException(
+                                        "Case does not exist."
+                                )
+                        );
+                    }
+
+                    return plugin
+                            .getCaseNoteService()
+                            .addNote(
+                                    caseId,
+                                    player.getUniqueId(),
+                                    player.getName(),
+                                    content
+                            );
+                })
+                .thenAccept(note -> {
 
                     Bukkit.getScheduler().runTask(
                             plugin,
-                            () -> {
-
-                                if (caseFile == null) {
-
-                                    sender.sendMessage(
-                                            ChatColor.RED +
-                                                    "Case #" +
-                                                    caseId +
-                                                    " does not exist."
-                                    );
-
-                                    return;
-                                }
-
-                                sender.sendMessage(
-                                        ChatColor.GRAY +
-                                                "Adding note..."
-                                );
-
-                                plugin.getCaseNoteService()
-                                        .addNote(
-                                                caseId,
-                                                author.getUniqueId(),
-                                                author.getName(),
-                                                content
-                                        )
-                                        .thenAccept(note -> {
-
-                                            Bukkit.getScheduler().runTask(
-                                                    plugin,
-                                                    () -> sendNoteCreated(
-                                                            sender,
-                                                            note
-                                                    )
-                                            );
-
-                                        })
-                                        .exceptionally(exception -> {
-
-                                            Bukkit.getScheduler().runTask(
-                                                    plugin,
-                                                    () -> sender.sendMessage(
-                                                            ChatColor.RED +
-                                                                    "Failed to add the case note."
-                                                    )
-                                            );
-
-                                            plugin.getLogger().severe(
-                                                    "Failed to add note to case #" +
-                                                            caseId
-                                            );
-
-                                            exception.printStackTrace();
-
-                                            return null;
-                                        });
-                            }
+                            () -> sendNoteCreated(
+                                    sender,
+                                    note
+                            )
                     );
 
                 })
@@ -573,14 +576,13 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
                             plugin,
                             () -> sender.sendMessage(
                                     ChatColor.RED +
-                                            "Failed to load case #" +
-                                            caseId +
-                                            "."
+                                            "Failed to add the note. " +
+                                            "Make sure the case exists."
                             )
                     );
 
                     plugin.getLogger().severe(
-                            "Failed to check case #" +
+                            "Failed to add note to case #" +
                                     caseId
                     );
 
@@ -588,34 +590,468 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
 
                     return null;
                 });
-                }
-        private void sendNoteCreated(
+    }
+
+    private void handleEvidence(
             CommandSender sender,
-            CaseNote note
+            String[] args
     ) {
 
-        sender.sendMessage("");
+        if (!sender.hasPermission("casemanager.evidence")) {
+            sendNoPermission(sender);
+            return;
+        }
+
+        if (args.length < 2) {
+            sender.sendMessage(
+                    ChatColor.RED +
+                            "Usage: /case evidence <add|list>"
+            );
+            return;
+        }
+
+        String action =
+                args[1].toLowerCase();
+
+        switch (action) {
+
+            case "add":
+                handleEvidenceAdd(
+                        sender,
+                        args
+                );
+                break;
+
+            case "list":
+                handleEvidenceList(
+                        sender,
+                        args
+                );
+                break;
+
+            default:
+                sender.sendMessage(
+                        ChatColor.RED +
+                                "Unknown evidence action."
+                );
+
+                sender.sendMessage(
+                        ChatColor.GRAY +
+                                "Usage: /case evidence <add|list>"
+                );
+                break;
+        }
+    }
+
+    private void handleEvidenceAdd(
+            CommandSender sender,
+            String[] args
+    ) {
+
+        if (!(sender instanceof Player player)) {
+            sender.sendMessage(
+                    ChatColor.RED +
+                            "Only players can add evidence."
+            );
+            return;
+        }
+
+        if (args.length < 5) {
+            sender.sendMessage(
+                    ChatColor.RED +
+                            "Usage: /case evidence add <id> <type> <content>"
+            );
+            return;
+        }
+
+        long caseId;
+
+        try {
+            caseId = Long.parseLong(args[2]);
+        } catch (NumberFormatException exception) {
+
+            sender.sendMessage(
+                    ChatColor.RED +
+                            "Case ID must be a number."
+            );
+
+            return;
+        }
+
+        if (caseId <= 0) {
+            sender.sendMessage(
+                    ChatColor.RED +
+                            "Invalid case ID."
+            );
+            return;
+        }
+
+        String type =
+                args[3].toUpperCase();
+
+        if (!evidenceTypes.contains(type)) {
+
+            sender.sendMessage(
+                    ChatColor.RED +
+                            "Invalid evidence type."
+            );
+
+            sender.sendMessage(
+                    ChatColor.GRAY +
+                            "Available types: " +
+                            String.join(
+                                    ", ",
+                                    evidenceTypes
+                            )
+            );
+
+            return;
+        }
+
+        String content =
+                String.join(
+                        " ",
+                        Arrays.copyOfRange(
+                                args,
+                                4,
+                                args.length
+                        )
+                );
+
+        if (content.isBlank()) {
+            sender.sendMessage(
+                    ChatColor.RED +
+                            "Evidence content cannot be empty."
+            );
+            return;
+        }
+
+        sender.sendMessage(
+                ChatColor.GRAY +
+                        "Adding evidence to case #" +
+                        caseId +
+                        "..."
+        );
+
+        plugin.getCaseService()
+                .getCase(caseId)
+                .thenCompose(caseFile -> {
+
+                    if (caseFile == null) {
+                        return CompletableFuture.failedFuture(
+                                new IllegalArgumentException(
+                                        "Case does not exist."
+                                )
+                        );
+                    }
+
+                    return plugin
+                            .getCaseEvidenceService()
+                            .addEvidence(
+                                    caseId,
+                                    player.getUniqueId(),
+                                    player.getName(),
+                                    type,
+                                    content
+                            );
+                })
+                .thenAccept(evidence -> {
+
+                    Bukkit.getScheduler().runTask(
+                            plugin,
+                            () -> sendEvidenceCreated(
+                                    sender,
+                                    evidence
+                            )
+                    );
+
+                })
+                .exceptionally(exception -> {
+
+                    Bukkit.getScheduler().runTask(
+                            plugin,
+                            () -> sender.sendMessage(
+                                    ChatColor.RED +
+                                            "Failed to add evidence. " +
+                                            "Make sure the case exists."
+                            )
+                    );
+
+                    plugin.getLogger().severe(
+                            "Failed to add evidence to case #" +
+                                    caseId
+                    );
+
+                    exception.printStackTrace();
+
+                    return null;
+                });
+    }
+
+    private void handleEvidenceList(
+            CommandSender sender,
+            String[] args
+    ) {
+
+        if (!sender.hasPermission("casemanager.evidence")) {
+            sendNoPermission(sender);
+            return;
+        }
+
+        if (args.length < 3) {
+            sender.sendMessage(
+                    ChatColor.RED +
+                            "Usage: /case evidence list <id>"
+            );
+            return;
+        }
+
+        long caseId;
+
+        try {
+            caseId = Long.parseLong(args[2]);
+        } catch (NumberFormatException exception) {
+
+            sender.sendMessage(
+                    ChatColor.RED +
+                            "Case ID must be a number."
+            );
+
+            return;
+        }
+
+        if (caseId <= 0) {
+            sender.sendMessage(
+                    ChatColor.RED +
+                            "Invalid case ID."
+            );
+            return;
+        }
+
+        sender.sendMessage(
+                ChatColor.GRAY +
+                        "Loading evidence for case #" +
+                        caseId +
+                        "..."
+        );
+
+        plugin.getCaseService()
+                .getCase(caseId)
+                .thenCompose(caseFile -> {
+
+                    if (caseFile == null) {
+                        return CompletableFuture.failedFuture(
+                                new IllegalArgumentException(
+                                        "Case does not exist."
+                                )
+                        );
+                    }
+
+                    return plugin
+                            .getCaseEvidenceService()
+                            .getEvidence(caseId);
+                })
+                .thenAccept(evidenceList -> {
+
+                    Bukkit.getScheduler().runTask(
+                            plugin,
+                            () -> sendEvidenceList(
+                                    sender,
+                                    caseId,
+                                    evidenceList
+                            )
+                    );
+
+                })
+                .exceptionally(exception -> {
+
+                    Bukkit.getScheduler().runTask(
+                            plugin,
+                            () -> sender.sendMessage(
+                                    ChatColor.RED +
+                                            "Failed to load case evidence."
+                            )
+                    );
+
+                    plugin.getLogger().severe(
+                            "Failed to load evidence for case #" +
+                                    caseId
+                    );
+
+                    exception.printStackTrace();
+
+                    return null;
+                });
+    }
+    private void sendEvidenceCreated(
+            CommandSender sender,
+            CaseEvidence evidence
+    ) {
 
         sender.sendMessage(
                 ChatColor.DARK_GRAY +
-                        "━━━━━━━━━━━━━━━━━━━━"
+                        "━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
         );
 
         sender.sendMessage(
                 ChatColor.DARK_AQUA +
-                        "CaseManager"
+                        "Case Evidence Added"
         );
 
         sender.sendMessage(
-                ChatColor.GREEN +
-                        "✓ " +
-                        ChatColor.GRAY +
-                        "Note " +
+                ChatColor.GRAY +
+                        "Evidence ID: " +
                         ChatColor.WHITE +
                         "#" +
-                        note.getId() +
-                        ChatColor.GRAY +
-                        " added to case " +
+                        evidence.getId()
+        );
+
+        sender.sendMessage(
+                ChatColor.GRAY +
+                        "Case: " +
+                        ChatColor.WHITE +
+                        "#" +
+                        evidence.getCaseId()
+        );
+
+        sender.sendMessage(
+                ChatColor.GRAY +
+                        "Type: " +
+                        ChatColor.AQUA +
+                        evidence.getType()
+        );
+
+        sender.sendMessage(
+                ChatColor.GRAY +
+                        "Added by: " +
+                        ChatColor.WHITE +
+                        evidence.getAddedByName()
+        );
+
+        sender.sendMessage(
+                ChatColor.GRAY +
+                        "Content: " +
+                        ChatColor.WHITE +
+                        evidence.getContent()
+        );
+
+        sender.sendMessage(
+                ChatColor.GRAY +
+                        "Added: " +
+                        ChatColor.WHITE +
+                        evidence.getCreatedAt()
+        );
+
+        sender.sendMessage(
+                ChatColor.DARK_GRAY +
+                        "━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+        );
+    }
+
+    private void sendEvidenceList(
+            CommandSender sender,
+            long caseId,
+            List<CaseEvidence> evidenceList
+    ) {
+
+        sender.sendMessage(
+                ChatColor.DARK_GRAY +
+                        "━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+        );
+
+        sender.sendMessage(
+                ChatColor.DARK_AQUA +
+                        "Evidence — Case #" +
+                        caseId
+        );
+
+        sender.sendMessage("");
+
+        if (evidenceList.isEmpty()) {
+
+            sender.sendMessage(
+                    ChatColor.GRAY +
+                            "No evidence has been added to this case."
+            );
+
+            sender.sendMessage(
+                    ChatColor.DARK_GRAY +
+                            "━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+            );
+
+            return;
+        }
+
+        for (CaseEvidence evidence : evidenceList) {
+
+            sender.sendMessage(
+                    ChatColor.AQUA +
+                            "#" +
+                            evidence.getId() +
+                            ChatColor.GRAY +
+                            " [" +
+                            ChatColor.WHITE +
+                            evidence.getType() +
+                            ChatColor.GRAY +
+                            "]"
+            );
+
+            sender.sendMessage(
+                    ChatColor.GRAY +
+                            "  Added by: " +
+                            ChatColor.WHITE +
+                            evidence.getAddedByName()
+            );
+
+            sender.sendMessage(
+                    ChatColor.GRAY +
+                            "  Content: " +
+                            ChatColor.WHITE +
+                            evidence.getContent()
+            );
+
+            sender.sendMessage(
+                    ChatColor.GRAY +
+                            "  Time: " +
+                            ChatColor.WHITE +
+                            evidence.getCreatedAt()
+            );
+
+            sender.sendMessage("");
+        }
+
+        sender.sendMessage(
+                ChatColor.DARK_GRAY +
+                        "━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+        );
+    }
+
+    private void sendNoteCreated(
+            CommandSender sender,
+            CaseNote note
+    ) {
+
+        sender.sendMessage(
+                ChatColor.DARK_GRAY +
+                        "━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+        );
+
+        sender.sendMessage(
+                ChatColor.DARK_AQUA +
+                        "Case Note Added"
+        );
+
+        sender.sendMessage(
+                ChatColor.GRAY +
+                        "Note ID: " +
+                        ChatColor.WHITE +
+                        "#" +
+                        note.getId()
+        );
+
+        sender.sendMessage(
+                ChatColor.GRAY +
+                        "Case: " +
                         ChatColor.WHITE +
                         "#" +
                         note.getCaseId()
@@ -623,17 +1059,29 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
 
         sender.sendMessage(
                 ChatColor.GRAY +
-                        "Note: " +
+                        "Author: " +
+                        ChatColor.WHITE +
+                        note.getAuthorName()
+        );
+
+        sender.sendMessage(
+                ChatColor.GRAY +
+                        "Content: " +
                         ChatColor.WHITE +
                         note.getContent()
         );
 
         sender.sendMessage(
-                ChatColor.DARK_GRAY +
-                        "━━━━━━━━━━━━━━━━━━━━"
+                ChatColor.GRAY +
+                        "Created: " +
+                        ChatColor.WHITE +
+                        note.getCreatedAt()
         );
 
-        sender.sendMessage("");
+        sender.sendMessage(
+                ChatColor.DARK_GRAY +
+                        "━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+        );
     }
 
     private void sendCaseCreated(
@@ -641,28 +1089,22 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
             Case caseFile
     ) {
 
-        sender.sendMessage("");
-
         sender.sendMessage(
                 ChatColor.DARK_GRAY +
-                        "━━━━━━━━━━━━━━━━━━━━"
+                        "━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
         );
 
         sender.sendMessage(
                 ChatColor.DARK_AQUA +
-                        "CaseManager"
+                        "Case Created"
         );
 
         sender.sendMessage(
-                ChatColor.GREEN +
-                        "✓ " +
-                        ChatColor.GRAY +
-                        "Case " +
-                        ChatColor.WHITE +
+                ChatColor.GRAY +
+                        "Case ID: " +
+                        ChatColor.AQUA +
                         "#" +
-                        caseFile.getId() +
-                        ChatColor.GRAY +
-                        " created."
+                        caseFile.getId()
         );
 
         sender.sendMessage(
@@ -674,24 +1116,29 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
 
         sender.sendMessage(
                 ChatColor.GRAY +
-                        "Status: " +
-                        ChatColor.WHITE +
-                        caseFile.getStatus().name()
-        );
-
-        sender.sendMessage(
-                ChatColor.GRAY +
                         "Reason: " +
                         ChatColor.WHITE +
                         caseFile.getReason()
         );
 
         sender.sendMessage(
-                ChatColor.DARK_GRAY +
-                        "━━━━━━━━━━━━━━━━━━━━"
+                ChatColor.GRAY +
+                        "Status: " +
+                        ChatColor.GREEN +
+                        caseFile.getStatus().name()
         );
 
-        sender.sendMessage("");
+        sender.sendMessage(
+                ChatColor.GRAY +
+                        "Created by: " +
+                        ChatColor.WHITE +
+                        caseFile.getCreatorName()
+        );
+
+        sender.sendMessage(
+                ChatColor.DARK_GRAY +
+                        "━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+        );
     }
 
     private void sendCaseDetails(
@@ -699,16 +1146,14 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
             Case caseFile
     ) {
 
-        sender.sendMessage("");
-
         sender.sendMessage(
                 ChatColor.DARK_GRAY +
-                        "━━━━━━━━━━━━━━━━━━━━"
+                        "━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
         );
 
         sender.sendMessage(
                 ChatColor.DARK_AQUA +
-                        "CASE #" +
+                        "Case #" +
                         caseFile.getId()
         );
 
@@ -728,28 +1173,43 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
                         caseFile.getTargetUuid()
         );
 
+        sender.sendMessage("");
+
         sender.sendMessage(
                 ChatColor.GRAY +
-                        "Created by: " +
+                        "Creator: " +
                         ChatColor.WHITE +
                         caseFile.getCreatorName()
         );
 
         sender.sendMessage(
                 ChatColor.GRAY +
-                        "Status: " +
+                        "Creator UUID: " +
                         ChatColor.WHITE +
-                        caseFile.getStatus().name()
+                        caseFile.getCreatorUuid()
         );
+
+        sender.sendMessage("");
 
         sender.sendMessage(
                 ChatColor.GRAY +
-                        "Reason: " +
-                        ChatColor.WHITE +
+                        "Reason:"
+        );
+
+        sender.sendMessage(
+                ChatColor.WHITE +
+                        "  " +
                         caseFile.getReason()
         );
 
         sender.sendMessage("");
+
+        sender.sendMessage(
+                ChatColor.GRAY +
+                        "Status: " +
+                        ChatColor.AQUA +
+                        caseFile.getStatus().name()
+        );
 
         sender.sendMessage(
                 ChatColor.GRAY +
@@ -765,12 +1225,36 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
                         caseFile.getUpdatedAt()
         );
 
+        sender.sendMessage("");
+
         sender.sendMessage(
-                ChatColor.DARK_GRAY +
-                        "━━━━━━━━━━━━━━━━━━━━"
+                ChatColor.GRAY +
+                        "Available actions:"
         );
 
-        sender.sendMessage("");
+        sender.sendMessage(
+                ChatColor.DARK_GRAY +
+                        "  /case timeline " +
+                        caseFile.getId()
+        );
+
+        sender.sendMessage(
+                ChatColor.DARK_GRAY +
+                        "  /case note " +
+                        caseFile.getId() +
+                        " <note>"
+        );
+
+        sender.sendMessage(
+                ChatColor.DARK_GRAY +
+                        "  /case evidence list " +
+                        caseFile.getId()
+        );
+
+        sender.sendMessage(
+                ChatColor.DARK_GRAY +
+                        "━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+        );
     }
 
     private void sendCaseList(
@@ -778,16 +1262,14 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
             List<Case> cases
     ) {
 
-        sender.sendMessage("");
-
         sender.sendMessage(
                 ChatColor.DARK_GRAY +
-                        "━━━━━━━━━━━━━━━━━━━━"
+                        "━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
         );
 
         sender.sendMessage(
                 ChatColor.DARK_AQUA +
-                        "CASE LIST"
+                        "Moderation Cases"
         );
 
         sender.sendMessage("");
@@ -799,60 +1281,67 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
                             "No cases have been created yet."
             );
 
-        } else {
+            sender.sendMessage(
+                    ChatColor.DARK_GRAY +
+                            "━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+            );
 
-            for (Case caseFile : cases) {
-
-                sender.sendMessage(
-                        ChatColor.WHITE +
-                                "#" +
-                                caseFile.getId() +
-                                ChatColor.GRAY +
-                                " | " +
-                                ChatColor.WHITE +
-                                caseFile.getTargetName() +
-                                ChatColor.GRAY +
-                                " | " +
-                                ChatColor.WHITE +
-                                caseFile.getStatus().name()
-                );
-
-                sender.sendMessage(
-                        ChatColor.DARK_GRAY +
-                                "   " +
-                                caseFile.getReason()
-                );
-            }
+            return;
         }
 
-        sender.sendMessage("");
+        for (Case caseFile : cases) {
+
+            sender.sendMessage(
+                    ChatColor.AQUA +
+                            "#" +
+                            caseFile.getId() +
+                            ChatColor.GRAY +
+                            " | " +
+                            ChatColor.WHITE +
+                            caseFile.getTargetName() +
+                            ChatColor.GRAY +
+                            " | " +
+                            ChatColor.YELLOW +
+                            caseFile.getStatus().name()
+            );
+
+            sender.sendMessage(
+                    ChatColor.DARK_GRAY +
+                            "  Reason: " +
+                            ChatColor.GRAY +
+                            caseFile.getReason()
+            );
+
+            sender.sendMessage(
+                    ChatColor.DARK_GRAY +
+                            "  Created by: " +
+                            ChatColor.GRAY +
+                            caseFile.getCreatorName()
+            );
+
+            sender.sendMessage("");
+        }
 
         sender.sendMessage(
                 ChatColor.DARK_GRAY +
-                        "━━━━━━━━━━━━━━━━━━━━"
+                        "━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
         );
-
-        sender.sendMessage("");
     }
-
     private void sendTimeline(
             CommandSender sender,
             long caseId,
             List<CaseTimelineEntry> entries
     ) {
 
-        sender.sendMessage("");
-
         sender.sendMessage(
                 ChatColor.DARK_GRAY +
-                        "━━━━━━━━━━━━━━━━━━━━"
+                        "━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
         );
 
         sender.sendMessage(
                 ChatColor.DARK_AQUA +
-                        "CASE #" +
-                        caseId +
-                        " TIMELINE"
+                        "Case Timeline — #" +
+                        caseId
         );
 
         sender.sendMessage("");
@@ -864,90 +1353,139 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
                             "No timeline entries found."
             );
 
-        } else {
+            sender.sendMessage(
+                    ChatColor.DARK_GRAY +
+                            "━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+            );
 
-            for (CaseTimelineEntry entry : entries) {
+            return;
+        }
 
-                String actor =
-                        entry.getActorName() == null
-                                ? "System"
-                                : entry.getActorName();
+        for (CaseTimelineEntry entry : entries) {
 
-                sender.sendMessage(
-                        ChatColor.DARK_GRAY +
-                                "[" +
-                                entry.getCreatedAt() +
-                                "]"
-                );
+            String actor =
+                    entry.getActorName() == null
+                            ? "System"
+                            : entry.getActorName();
+
+            sender.sendMessage(
+                    ChatColor.AQUA +
+                            "[" +
+                            entry.getCreatedAt() +
+                            "]"
+            );
+
+            sender.sendMessage(
+                    ChatColor.GRAY +
+                            "  Action: " +
+                            ChatColor.WHITE +
+                            entry.getAction()
+            );
+
+            sender.sendMessage(
+                    ChatColor.GRAY +
+                            "  Actor: " +
+                            ChatColor.WHITE +
+                            actor
+            );
+
+            if (entry.getDetails() != null
+                    && !entry.getDetails().isBlank()) {
 
                 sender.sendMessage(
                         ChatColor.GRAY +
-                                actor +
-                                ChatColor.DARK_GRAY +
-                                " → " +
+                                "  Details: " +
                                 ChatColor.WHITE +
-                                entry.getAction()
+                                entry.getDetails()
                 );
-
-                if (entry.getDetails() != null &&
-                        !entry.getDetails().isBlank()) {
-
-                    sender.sendMessage(
-                            ChatColor.GRAY +
-                                    "  " +
-                                    entry.getDetails()
-                    );
-                }
-
-                sender.sendMessage("");
             }
+
+            sender.sendMessage("");
         }
 
         sender.sendMessage(
                 ChatColor.DARK_GRAY +
-                        "━━━━━━━━━━━━━━━━━━━━"
+                        "━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
         );
-
-        sender.sendMessage("");
     }
 
     private void sendHelp(
             CommandSender sender
     ) {
 
-        sender.sendMessage("");
+        sender.sendMessage(
+                ChatColor.DARK_GRAY +
+                        "━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+        );
 
         sender.sendMessage(
                 ChatColor.DARK_AQUA +
                         "CaseManager"
         );
 
-        sender.sendMessage(
-                ChatColor.GRAY +
-                        "/case create <player> <reason>"
-        );
+        sender.sendMessage("");
 
-        sender.sendMessage(
-                ChatColor.GRAY +
-                        "/case view <id>"
-        );
+        if (sender.hasPermission("casemanager.create")) {
 
-        sender.sendMessage(
-                ChatColor.GRAY +
-                        "/case list [limit]"
-        );
+            sender.sendMessage(
+                    ChatColor.AQUA +
+                            "/case create <player> <reason>"
+            );
+        }
 
-        sender.sendMessage(
-                ChatColor.GRAY +
-                        "/case timeline <id>"
-        );
+        if (sender.hasPermission("casemanager.view")) {
 
-        sender.sendMessage(
-                ChatColor.GRAY +
-                        "/case note <id> <message>"
-        );
+            sender.sendMessage(
+                    ChatColor.AQUA +
+                            "/case view <id>"
+            );
+
+            sender.sendMessage(
+                    ChatColor.AQUA +
+                            "/case timeline <id>"
+            );
+        }
+
+        if (sender.hasPermission("casemanager.list")) {
+
+            sender.sendMessage(
+                    ChatColor.AQUA +
+                            "/case list [limit]"
+            );
+        }
+
+        if (sender.hasPermission("casemanager.note")) {
+
+            sender.sendMessage(
+                    ChatColor.AQUA +
+                            "/case note <id> <note>"
+            );
+        }
+
+        if (sender.hasPermission("casemanager.evidence")) {
+
+            sender.sendMessage(
+                    ChatColor.AQUA +
+                            "/case evidence add <id> <type> <content>"
+            );
+
+            sender.sendMessage(
+                    ChatColor.AQUA +
+                            "/case evidence list <id>"
+            );
+        }
 
         sender.sendMessage("");
+
+        sender.sendMessage(
+                ChatColor.GRAY +
+                        "Use /case <command> for moderation case management."
+        );
+
+        sender.sendMessage(
+                ChatColor.DARK_GRAY +
+                        "━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+        );
     }
 
     private void sendNoPermission(
@@ -998,17 +1536,29 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
                 suggestions.add("note");
             }
 
+            if (sender.hasPermission(
+                    "casemanager.evidence"
+            )) {
+                suggestions.add("evidence");
+            }
+
             return filter(
                     suggestions,
                     args[0]
             );
         }
 
-        if (args.length == 2 &&
-                args[0].equalsIgnoreCase("create") &&
-                sender.hasPermission(
-                        "casemanager.create"
-                )) {
+        String subCommand =
+                args[0].toLowerCase();
+
+        if (subCommand.equals("create")
+                && args.length == 2) {
+
+            if (!sender.hasPermission(
+                    "casemanager.create"
+            )) {
+                return Collections.emptyList();
+            }
 
             List<String> players =
                     new ArrayList<>();
@@ -1027,21 +1577,69 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
             );
         }
 
-        if (args.length == 2 &&
-                args[0].equalsIgnoreCase("list") &&
-                sender.hasPermission(
-                        "casemanager.list"
-                )) {
+        if (subCommand.equals("list")
+                && args.length == 2) {
+
+            if (!sender.hasPermission(
+                    "casemanager.list"
+            )) {
+                return Collections.emptyList();
+            }
 
             return filter(
-                    List.of(
-                            "5",
+                    Arrays.asList(
                             "10",
                             "20",
+                            "30",
+                            "40",
                             "50"
                     ),
                     args[1]
             );
+        }
+
+        if (subCommand.equals("evidence")) {
+
+            if (!sender.hasPermission(
+                    "casemanager.evidence"
+            )) {
+                return Collections.emptyList();
+            }
+
+            if (args.length == 2) {
+
+                List<String> suggestions =
+                        Arrays.asList(
+                                "add",
+                                "list"
+                        );
+
+                return filter(
+                        suggestions,
+                        args[1]
+                );
+            }
+
+            if (args.length == 3
+                    && args[1].equalsIgnoreCase("add")) {
+
+                return Collections.emptyList();
+            }
+
+            if (args.length == 3
+                    && args[1].equalsIgnoreCase("list")) {
+
+                return Collections.emptyList();
+            }
+
+            if (args.length == 4
+                    && args[1].equalsIgnoreCase("add")) {
+
+                return filter(
+                        evidenceTypes,
+                        args[3]
+                );
+            }
         }
 
         return Collections.emptyList();
@@ -1052,15 +1650,28 @@ public final class CaseCommand implements CommandExecutor, TabCompleter {
             String input
     ) {
 
+        if (input == null
+                || input.isBlank()) {
+
+            return new ArrayList<>(values);
+        }
+
         String lowerInput =
                 input.toLowerCase();
 
-        return values.stream()
-                .filter(value ->
-                        value.toLowerCase()
-                                .startsWith(lowerInput)
-                )
-                .sorted()
-                .toList();
+        List<String> result =
+                new ArrayList<>();
+
+        for (String value : values) {
+
+            if (value
+                    .toLowerCase()
+                    .startsWith(lowerInput)) {
+
+                result.add(value);
+            }
+        }
+
+        return result;
     }
-                }
+}
